# fpv

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
config/: default.toml  sample.user.toml
demos/: sample.go  sample.html  sample.py  sample.tsx
scripts/: bench-navigation.sh  bench.sh
src/: lib.rs  main.rs
src/app/: current_dir_state.rs  focus.rs  mod.rs  navigation.rs  navigation_result.rs  preview_controller.rs  preview_errors.rs  run.rs  state.rs  status.rs
src/config/: keymap.rs  load.rs  merge.rs  mod.rs  validate.rs
src/fs/: current_dir.rs  git.rs  mod.rs  preview.rs  tree.rs
src/highlight/: mod.rs  render.rs  syntax.rs
src/tui/: config_warnings.rs  event_loop.rs  input.rs  mod.rs  preview_pane.rs  status_bar.rs  tree_pane.rs
tests/: integration_harness.rs  unit_harness.rs
tests/integration/: config_override_flow.rs  empty_directory_state_tests.rs  keyboard_navigation_flow.rs  path_context_consistency_tests.rs  perf_directory_transition_tests.rs  perf_preview_latency.rs  perf_tree_navigation.rs  permission_display_regression.rs  preview_footer_layout_flow.rs  preview_navigation_flow.rs  preview_panel_title_flow.rs  quit_restore_terminal.rs  rapid_navigation_regression_tests.rs  regression_suite.rs  single_layer_navigation_flow.rs
tests/unit/: config_conflict_tests.rs  config_parse_tests.rs  current_dir_listing_tests.rs  enter_directory_tests.rs  input_mapping_tests.rs  permission_block_tests.rs  permission_display_value_tests.rs  preview_metadata_footer_tests.rs  preview_mode_tests.rs  root_boundary_tests.rs  (+4 more)
(+2 files in other folders)
