[package]
name = "fpv"
version = "0.1.0"
edition = "2021"
description = "A minimal, keyboard-first TUI file previewer with syntax highlighting"
license = "MIT"
readme = "README.md"
repository = "https://github.com/digicrafts/fpv"
homepage = "https://github.com/digicrafts/fpv"
documentation = "https://docs.rs/fpv"
keywords = ["tui", "terminal", "preview", "cli", "rust"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1"
crossterm = "=0.27.0"
ignore = "=0.4.18"
ratatui = "=0.26.3"
serde = { version = "=1.0.203", features = ["derive"] }
toml = "=0.8.12"
unicode-width = "=0.1.14"
time = "=0.3.36"
globset = "=0.4.14"
indexmap = "=2.2.6"
tree-sitter = "=0.20.10"
tree-sitter-javascript = "=0.20.4"
tree-sitter-python = "=0.20.4"
tree-sitter-rust = "=0.20.4"
tree-sitter-typescript = "=0.20.5"
tree-sitter-highlight = "=0.20.1"
tree-sitter-html = "=0.20.0"
tree-sitter-json = "=0.20.1"
tree-sitter-go = "=0.20.0"
tree-sitter-c = "=0.20.1"
tree-sitter-cpp = "=0.20.0"
tree-sitter-java = "=0.20.0"
tree-sitter-bash = "=0.20.5"
tree-sitter-css = "=0.20.0"
tree-sitter-toml = "=0.20.0"
tree-sitter-md = "=0.1.7"

[dev-dependencies]
assert_cmd = "=2.0.14"
predicates = "=3.1.0"
tempfile = "=3.10.1"
